--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[[tool.uv.index]]
+url = "https://test.pypi.org/simple"
+default = true
+
 [project]
 name = "axon"
 version = "0.1.0"
@@ -25,3 +29,4 @@ binding = "AI"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
