--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 # Top-level configuration
 name = "my-axon"
-main = "src/index.js"
+main = "src/worker.py"
+compatibility_flags = ["python_workers"]
 compatibility_date = "2022-07-12"
 
 route = { pattern = "axon.sarahsl.workers.dev/*", zone_name = "workers.dev" } 
